clusters/oracle-cluster/apps/emulatorjs/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingress-stripprefix
  namespace: emulatorjs

spec:
  stripPrefix:
    prefixes:
      - /backend
