clusters/oracle-cluster/apps/emulatorjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emulatorjs
  namespace: emulatorjs
  labels:
    app: emulatorjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emulatorjs
  template:
    metadata:
      labels:
        app: emulatorjs
    spec:
      containers:
      - name: emulatorjs
        image: lscr.io/linuxserver/emulatorjs:1.9.2@sha256:89e676a80f05cc85ca3b34ff2788dae1f0438c449ded45ae85f2a8fae7a89e09
        ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 3000
            protocol: TCP
        volumeMounts:
        - name: emulatorjs-volume
          mountPath: /config
        - name: emulatorjs-volume
          mountPath: /data
      terminationGracePeriodSeconds: 30
      volumes:
      - name: emulatorjs-volume
        persistentVolumeClaim:
          claimName: emulatorjs-pvc
