clusters/oracle-cluster/apps/emulatorjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs-service
  namespace: freshrss
spec:
  selector:
    app: emulatorjs
  type: ClusterIP
  ports:
    - name: emulatorjs-80
      port: 80
      targetPort: 80
    - name: emulatorjs-3000
      port: 3000
      targetPort: 3000
