clusters/oracle-cluster/apps/emulatorjs/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: emulatorjs-ingress
    namespace: emulatorjs
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts: ENC[AES256_GCM,data:I9Vn/0SeHRu8qzri8fJXzjuFaAtu+A9ohQj4Xc11,iv:gm+Y8TxHz0rBazr1I7Hly7uDqDQFPe05SdxUTt5zjns=,tag:k6nO+UjzyMwroFOPl9UneQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:DWiu2J+1e05Am8A4ckElVwGre7lXr4nB/K58Ew/4,iv:rXVXxWwdbVGaqDMvOJwj5csIxKrd/c3F5yCMgRMlYOY=,tag:iLhtC/I9bUvoRox2oE9oOQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: emulatorjs-80
                        port:
                            number: 80
        - host: ENC[AES256_GCM,data:JqYjsuiyvDiCiVAXLzV2JJurYgY1VfyEUxJJd+9B,iv:An+eTjTUwyZFtyOa11QuH+fP37ptB5AT1MVPiHUR9AQ=,tag:BreHkuMpuEQaufmQSHqaVQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /backend
                  backend:
                    service:
                        name: emulatorjs-3000
                        port:
                            number: 3000h
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3d1B2em5VUVFOQkhybzNI
[...]
            BQ3Qs9wdJzWWPtejqoCyk2tY424OlRh/NZuFYZNvwBiDrBA/9viJkg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-20T08:57:02Z"
    mac: ENC[AES256_GCM,data:2hcl5Gae/tDd18+x59G6PY8eRttg7pquQAiGU/GjXHzXlL0ZZSrxUtXtTXmLB1MDdo/TI5vBJurE3IMq7MxHgPGbi1iGMoLYOIobUypFdq7oVQJAKLI0FtJl5xZNvbwDEBtMT+VDb6bwlPufiE+qv0a0GgVS96nyFb4F+JKGoLc=,iv:PwA18DbRlRbSA+8tQRDI1sNDau6XCCnDkQgO66LuXAQ=,tag:vwIBVIUyB8YDjTFNq7JMmA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
